syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
option go_package = "github.com/ferza17/ecommerce-microservices-v2/api-gateway/model/rpc/pb";

message CreateGatewayEventStoreRequest {
  string id = 1;
  string saga_id = 2;
  string entity = 3;
  string entity_id = 4;
  string event_type = 5;
  string status = 6; // pending, completed, failed, rolled_back
  google.protobuf.Struct payload = 7;
  google.protobuf.Struct previous_state = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}


message CreateGatewayEventStoreResponse {
  string id = 1;
}
